rds.tf
resource "aws_db_subnet_group" "oficina" {
  name       = "oficina-db-subnet"
  subnet_ids = [aws_subnet.public_a.id, aws_subnet.public_b.id]

  tags = { Name = "oficina-db-subnet-group" }
}

resource "aws_security_group" "db" {
  name        = "oficina-db-sg"
  description = "Acesso ao PostgreSQL da oficina"
  vpc_id      = aws_vpc.oficina.id

  ingress {
    description = "PostgreSQL"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "oficina-db-sg" }
}

resource "aws_db_instance" "oficina" {
  identifier     = "oficina-db"
  engine         = "postgres"
  engine_version = "15"

  instance_class    = var.db_instance_class
  allocated_storage = 20
  storage_type      = "gp2"

  db_name  = var.db_name
  username = var.db_username
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.oficina.name
  vpc_security_group_ids = [aws_security_group.db.id]
  publicly_accessible    = var.publicly_accessible

  backup_retention_period = 7
  skip_final_snapshot     = true
  deletion_protection     = false

  performance_insights_enabled = false

  tags = { Name = "oficina-db" }
}
